[project]
name = "salaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "67 Yousi", email = "clash.kont.war@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.56.0",
]

[project.scripts]
salaries = "salaries:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
